--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -7,5 +7,320 @@ JOURNAL = "Journal of the Association for Computing Machinery",
 VOLUME = 39,
 PAGES = {95--146},
 YEAR = 1992}
-
-
+@article{OWL2,
+  author = {W3C},
+  title = {OWL 2 Web Ontology Language},
+  journal = {https://www.w3.org/standards/techs/owl#w3c_all},
+}
+@article{RDF,
+  author = {W3C},
+  title = {Resource Description Framework (RDF))},
+  journal = {http://www.w3.org/standards/techs/rdf#w3c_all},
+}
+@article{UML,
+  author = {Object Management Group},
+  title = {Unified Modeling Language},
+  journal = {http://www.omg.org/spec/UML/},
+}
+@article{RFP,
+  author = {Object Management Group},
+  title = {Ontology, Model and Specification Integration and Interoperability Request For Proposal},
+  journal = {OMG Document Number ad/13-12-02},
+}
+@article{flogic,
+  author = {M. KIFER and G. LAUSEN and J. WU},
+  title = {Logical Foundations of Object-Oriented and Frame-Based Languages,},
+  journal = {Journal of the ACM},
+  volume = {42}, 
+  pages = {741--843},
+  year = {1995},
+}
+@article{obo,
+  author = {C. MUNGALL and A. IRELAND},
+  title = {The OBO Flat File Format Specification, version 1.4 (Draft), 8 December 2010,},
+  journal = {\url{http://www.geneontology.org/GO.format.obo-1_4.shtml}},
+  year = 2010,
+}
+  
+@article{StuderEtAl:KnowledgeEngineering1998,
+  author = {R. STUDER and V.R. BENJAMINS and D. FENSEL},
+  title = {Knowledge Engineering: Principles and Methods},
+  journal = {In: Data \& Knowledge Engineering 25.1--2 (1998), pp. 161--198.},
+  year = 1998,
+}
+@book{Knuth:LiterateProgramming1992,
+  author = {D. E. KNUTH},
+  title = {Literate Programming},
+  journal = {The University of Chicago Press},
+  year = 1992,
+}
+@article{SuarezFigueroaEtAl:OntologyGlossary2008,
+  author = {MC. SUÁREZ-FIGUEROA and A. GÓMEZ-P\'EREZ},
+  title = {First Attempt towards a Standard Glossary of Ontology Engineering Terminology},
+  journal = {In: The 8th International Conference on Terminology and Knowledge Engineering, 18--21 August 2008, Copenhagen, Denmark.},
+  year = 2008,
+}
+@article{circ1,
+  author = {J. McCARTHY},
+  title = {Circumscription --- A form of non-monotonic reasoning},
+  journal = {Artificial Intelligence, 13:27–39, 1980},
+  year = 1980,
+}
+@article{circ2,
+  author = {V. LIFSCHITZ},
+  title = {Circumscription},
+  journal = {In Handbook of Logic in Artificial Intelligence and Logic Programming, Volume 3, pages 297--352. Oxford University Press 1994.},
+  year = 1994,
+}
+@article{DAquin:OntologyExtraction2010,
+  author = {M. D'AQUIN},
+  title = {Ontology Extraction Module},
+  journal = {NeOn Wiki, 8 June 2010.\newline \url{http://neon-toolkit.org/wiki/Ontology_Module_Extraction}},
+  year = 2010,
+}
+@article{KutzEtAl:ChineseWhispers2010,
+  author = {O. KUTZ and I. NORMANN and T. MOSSAKOWSKI and and D. WALTHER},
+  title = {Chinese Whispers and Connected Alignments},
+  journal = {In: Proc.\ of the 5th International Workshop on Ontology Matching, OM-2010, co-located with the 9th International Semantic Web Conference (ISWC), 7 November 2010, Shanghai, China. \url{http://disi.unitn.it/~p2p/OM-2010/om2010_Tpaper3.pdf}},
+  year = 2010,
+}
+@article{CuencaGrauEtAl:ExtractingModulesOntologies2007,
+  author = {B. CUENCA GRAU and I. HORROCKS and Y. KAZAKOV and and U. SATTLER},
+  title = {Just the Right Amount: Extracting Modules from Ontologies},
+  journal = {In: Proc.\ of the 16th International World Wide Web Conference (WWW), pp. 717–726, 8–12 May 2007, Banff, Alberta, Canada. \url{https://www.cs.ox.ac.uk/isg/people/yevgeny.kazakov/publications/confs/CueHorKazSat07Modularity.pdf}},
+  year = 2007,
+}
+@article{W3C:REC-rdf-syntax-grammar-20040210,
+  author = {W3C RDF CORE WORKING GROUP},
+  title = {{RDF/XML} Syntax Specification (Revised)},
+  journal = {W3C Recommendation, 10 February 2004.  \url{http://www.w3.org/TR/2004/REC-rdf-syntax-grammar-20040210/}},
+  year = 2004,
+}
+@article{W3C:NOTE-swbp-vocab-pub-20080828,
+  author = {W3C SEMANTIC WEB DEPLOYMENT WORKING GROUP},
+  title = {Best Practice Recipes for Publishing RDF Vocabularies},
+  journal = {W3C Working Group Note, 28 August 2008.  \url{http://www.w3.org/TR/2008/NOTE-swbp-vocab-pub-20080828/}},
+  year = 2008,
+}
+@article{rfc2616,
+  author = {IETF NETWORK WORKING GROUP},
+  title = {Hypertext Transfer Protocol -- {HTTP/1.1}},
+  journal = {RFC 2616, 1999},
+  year = 1999,
+}
+@article{BernersLee:LinkedData2006,
+  author = {BERNERS-T. LEE},
+  title = {Design Issues: Linked Data},
+  journal = {27 July 2006. \url{http://www.w3.org/DesignIssues/LinkedData.html}},
+  year = 2006,
+}
+@article{W3C:NOTE-owl2-manchester-syntax-20091027,
+  author = {W3C OWL WORKING GROUP},
+  title = {OWL 2 Web Ontology Language Manchester Syntax},
+  journal = {W3C Working Group Note, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/NOTE-owl2-manchester-syntax-20091027/}},
+  year = 2009,
+}
+@article{W3C:REC-owl2-rdf-based-semantics-20091027,
+  author = {W3C OWL WORKING GROUP},
+  title = {OWL 2 Web Ontology Language: RDF-Based Semantics},
+  journal = {W3C Recommendation, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/}},
+  year = 2009,
+}
+@article{Wikipedia:LinkedData2011,
+  author = {WIKIMEDIA FOUNDATION, ed.},
+  title = {Linked Data},
+  journal = {from Wikipedia, the free encyclopedia, 9 November 2011.  \url{http://en.wikipedia.org/w/index.php?title=Linked_Data&oldid=459835053}},
+  year = 2011,
+}
+@article{Rabe:MMT2011,
+  author = {F. RABE},
+  title = {The MMT Language and System},
+  journal = {October 11, 2011. \url{https://svn.kwarc.info/repos/MMT/doc/manual/mmt.pdf}},
+  year = 2011,
+}
+@article{GEN69a,
+  author = {G. GENTZEN},
+  title = {Investigations into Logical Deduction},
+  journal = {In: The Collected Papers of Gerhard Gentzen, M. E. Szabo (ed.), pp. 68--213, North-Holland Amsterdam, 1969.},
+  year = 1969,
+}
+@article{Scott74,
+  author = {D. SCOTT},
+  title = {Rules and Derived Rules},
+  journal = {In: Logical Theory and Semantic Analysis, S. Stenlund (ed.), pp. 147--161, Reidel, 1974.},
+  year = 1974,
+}
+@article{Avron91,
+  author = {A. AVRON},
+  title = {Simple Consequence Relations},
+  journal = {In: Inf. Comput. 92(1), pp. 105--140, 1991.},
+  year = 1991,
+}
+@article{ArieliAvron2000,
+  author = {O. ARIELI and A. AVRON},
+  title = {General patterns for nonmonotonic reasoning: From basic entailments to plausible relations},
+  journal = {Logic Journal of the IGPL 8(2), pp. 119--148, 2000},
+  year = 2000,
+}
+@article{carnielli2008analysis,
+  author = {W.A. CARNIELLI and M. CONIGLIO and D.M. GABBAY and P. GOUVEIA and C. SERNADAS},
+  title = {Analysis and synthesis of logics: how to cut and paste reasoning systems},
+  journal = {Applied logic series, Springer, 2008.},
+  year = 2008,
+}
+ZimmerEuze06,
+@article{ZimmermanEtAl06,
+  author = {A. ZIMMERMANN and M. KR\"OTZSCH and J. EUZENAT and P. HITZLER},
+  title = {Formalizing Ontology Alignment and its Operations with Category Theory},
+  journal = {In: B. Bennett and C. Fellbaum: Proceedings of the Fourth International Conference on Formal Ontology in Information Systems (FOIS 2006), pp. 277--288,Frontiers in Artificial Intelligence and Applications 150, IOS Press 2006},
+  year = 2006,
+}
+@article{CharPar,
+  author = {J. A. GOGUEN and R.M. BURSTALL},
+  title = {A Study in the Foundations of Programming Methodology: Specifications, Institutions, Charters and Parchments},
+  journal = {In: Category Theory and Computer Programming, D. Pitt et al. (eds.), pp. 313--333, no.\ 240 in LNCS, Springer, 1985.},
+  year = 1985,
+}
+@article{Institutions,
+  author = {J. A. GOGUEN and R.M. BURSTALL},
+  title = {Institutions: Abstract Model Theory for Specification and Programming},
+  journal = {Journal of the Association for Computing Machinery 39, pp. 95--146, , 1992},
+  year = 1992,
+}
+@article{inst-mor,
+  author = {J. A. GOGUEN and G. ROSU},
+  title = {Institution morphisms},
+  journal = {In: Formal aspects of computing 13, pp. 274–307, 2002},
+  year = 2002,
+}
+@article{Meseguer89,
+  author = {J. MESEGUER},
+  title = {General Logics},
+  journal = {Logic Colloquium 87, pp. 275--329, 1989},
+  year = 1989,
+}
+@article{Comorphisms,
+  author = {J. A. GOGUEN and G. RO\c{S}U},
+  title = {Institution morphisms},
+  journal = {Formal aspects of computing 13, pp. 274-307, 2002},
+  year = 2002,
+}
+@article{GrothendieckInstitutions,
+  author = {R. DIACONESCU},
+  title = {Grothendieck Institutions},
+  journal = {Applied categorical structures 10, pp. 383--402, 2002},
+  year = 2002,
+}
+@article{Institutes,
+  author = {T. MOSSAKOWSKI and O. KUTZ},
+  title = {Institutes: A simpler semantics for heterogeneous ontologies},
+  journal = {December 2011, submitted. \url{http://www.informatik.uni-bremen.de/~till/papers/hetonto.pdf}},
+  year = 2011,
+}
+@article{OntoGraph,
+  author = {T. MOSSAKOWSKI and O. KUTZ},
+  title = {The Onto-Logical Translation Graph},
+  journal = {In: 5th International Workshop on Modular Ontologies (WoMO) at the 23rd European Summer School in Logic, Language and Information (ESSLLI) (Ljubljana, Slovenia, Aug. 8–12, 2011), O. Kutz, T. Schneider (eds.), IOS Press 2011.},
+  year = 2011,
+}
+@article{ThreeSemantics,
+  author = {T. MOSSAKOWSKI and C. LANGE and O. KUTZ},
+  title = {Three Semantics for the Core of the Distributed Ontology Language},
+  journal = {In Michael Gruninger (Ed.), FOIS 2012: 7th International Conference on Formal Ontology in Information Systems},
+  year = 2012,
+}
+@article{DublinCore,
+  author = {DCMI USAGE BOARD},
+  title = {DCMI metadata terms},
+  journal = {DCMI recommendation, Dublin Core Metadata Initiative, 2003.},
+  year = 2003,
+}
+@article{OMV,
+  author = {J. HARTMANN and R. PALMA and Y. SURE and M. C. SU\'AREZ-FIGUEROA and P. HAASE and  A. G\'OMEZ-P\'EREZ and R. STUDER},
+  title = {Ontology metadata vocabulary and applications},
+  journal = {In: On the Move to Meaningful Internet Systems 2005: OTM Workshops, R.\ Meersman, Z.\ Tari, P.\ Herrero, et al. (eds.), pp. 906--915, no.\ 3762 in LNCS, Springer, Oct. 2005.},
+  year = 2005,
+}
+@article{uml,
+  author = {S. Cranefield and M. PURVIS},
+  title = {UML as an ontology modelling language},
+  journal = {In Proceedings of the Workshop on Intelligent Information Integration, 16th International Joint Conference on Artificial Intelligence (IJCAI-99), 1999. \url{http://sunsite.informatik.rwth-aachen.de/Publications/CEUR-WS/Vol-23/cranefield-ijcai99-iii.pdf}\todonote[author=Christoph Lange,date=D:201107151858+02'00',type=todo]{Properly integrate this (or a newer one)}},
+  year = 1999,
+}
+@article{do-roam,
+  author = {M. CODESCU and G. HORSINKA and O. KUTZ and T. MOSSAKOWSKI and R. RAU},
+  title = {DO-ROAM: Activity-Oriented Search and Navigation with OpenStreetMap},
+  journal = {In: Fourth International Conference on GeoSpatial Semantics, C. Claramunt, S. Levashkin, M. Bertolotto (eds.), pp. 88--107, no.\ 6631 in LNCS, Springer, 2011.},
+  year = 2011,
+}
+@article{HuQu-08,
+  author = {W. HU and Y. QU},
+  title = {Falcon-AO: A practical ontology matching system},
+  journal = {In: Proceedings of WWW-07, pp. 237--239, 2008.},
+  year = 2008,
+}
+@article{dolce,
+  author = {C. MASOLO and S. BORGO and A. GANGEMI and N. GUARINO and A. OLTRAMARI},
+  title = {Ontology Library},
+  journal = {WonderWeb Deliverable, Report No.\ 18 of the Laboratory for Applied Ontology -- ISTC-CNR, Dec.\ 2003. \url{http://www.loa-cnr.it/Papers/D18.pdf}},
+  year = 2003,
+}
+@article{OWLTime,
+  author = {J.R. HOBBS and F. PAN},
+  title = {An Ontology of Time for the Semantic Web},
+  journal = {ACM Transactions on Asian Language Processing (TALIP): Special issue on Temporal Information Processing, Vol. 3, No. 1, March 2004, pp. 66–85.},
+  year = 2004,
+}
+@article{OWLSTime,
+  author = {F. PAN and J.R. HOBBS},
+  title = {Time in OWL-S},
+  journal = {In Proceedings of the AAAI Spring Symposium on Semantic Web Services, Stanford University, CA, pp. 29–36.},
+}
+@article{SROIQ,
+  author = {I. HORROCKS and O. KUTZ and U. SATTLER},
+  title = {The Even More Irresistible SROIQ},
+  journal = {In Knowledge representation 2006, p. 57--67},
+  year = 2006,
+}
+@article{Lucanu,
+  author = {D. LUCANU and Y.-F. LI and J. SONG DONG},
+  title = {Semantic Web Languages --- Towards an Institutional Perspective},
+  journal = {In: Essays Dedicated to Joseph A. Goguen, Lecture Notes in Computer Science 4060 Springer 2006, p. 99--123},
+  year = 2006,
+}
+@article{F-logic,
+  author = {M. KIFER and G. LAUSEN and J. WU},
+  title = {Logical Foundations of Object-Oriented and Frame-Based Languages},
+  journal = {J. ACM 42(4): 741-843, 1995},
+  year = 1995,
+}
+@article{DiaconescuBook,
+  author = {DIACONESCU, R.},
+  title = {Institution-Independent Model Theory},
+  journal = {Birkhäuser, 2008},
+  year = 2008,
+}
+@article{Artale02,
+  author = {Artale, A. and Franconi, E. and Wolter, F. and Zakharyaschev, M.},
+  title = {A temporal description logic for reasoning about conceptual schemas and queries},
+  journal = {In: S. Flesca and S. Greco and N. Leone and G. Ianni, Proceedings of the 8th Joint European Conference on Logics in Artificial Intelligence (JELIA-02), Springer LNAI 2424, 98-110, 2002},
+  year = ,
+}
+@article{Artale07a,
+  author = {Artale, A. and Parent, C. and Spaccapietra, S.},
+  title = {Evolving objects in temporal information systems},
+  journal = {Annals of Mathematics and Artificial Intelligence 50:5-38, 2007},
+  year = 2002,
+}
+@article{Artale07time,
+  author = {Alessandro Artale and Roman Kontchakov and Carsten Lutz and Frank Wolter and Michael Zakharyaschev},
+  title = {Temporalising Tractable Description Logic},
+  journal = {Proc. of the 14th International Symposium on Temporal Representation and Reasoning (TIME-07), 2007},
+  year = 2007,
+}
+@article{AGK08,
+  author = {Alessandro Artale and Nicola Guarino and C. Maria Keet},
+  title = {Formalising temporal constraints on part-whole relations},
+  journal = {In: Gerhard Brewka and Jerome Lang, 11th International Conference on Principles of Knowledge Representation and Reasoning (KR'08), 673-683, AAAI Press 2008},
+  year = 2008,
+}
