removed duplicate word

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -849,7 +849,7 @@ in a semantics-preserving way. The structuring language aspect \may be empty.
 
 The \emph{annotation language aspect} of an OMS language is
 conformant with DOL if its constructs have no impact on the semantics.
-The annotation language aspect \shall may be non-empty; it \shall
+The annotation language aspect \shall be non-empty; it \shall
 provide the facility to express comments.
 
 \CLnote{say something about ``infrastructure theories'', i.e. axiomatizations of one logic in another logic.  Providers of OMS language translations MAY also provide these (given that the translation is theoroidal).  Note the possible trade-off between readability and theorem proving complexity (as the infrastructure axioms may be complex) -- so maybe we should encourage multiple alternative translations to co-exist.}
