human-comprehensible rationale for conformance of a language/logic

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -793,6 +793,13 @@ expected to become the basis for normative activities.
 
 \sclause{Conformance of an OMS language/a logic with DOL}\label{c:conform:logic}
 
+Rationale: for an OMS language to conform with DOL,
+\begin{itemize}
+\item its logical language aspect either needs to satisfy certain criteria about its abstract syntax or formal semantics itself, or there must be a translation (again satisfying certain criteria) to a language that already is DOL-conforming.
+\item its structuring language aspect (if present) must not conflict with DOL's own structuring mechanisms
+\item its annotation language aspect must not conflict with DOL's meta-language constructs.
+\end{itemize}
+We also define different conformance levels w.r.t.\ the usage of IRIs as identifiers for all kinds of entities that the OMS language supports.
 
 %
 %\begin{description}
