human-comprehensible rationale for conformance of a translation

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -878,6 +878,8 @@ Any conforming language and logic shall have a machine-processable description
 
 \ssclause{Conformance of language/logic translations with DOL}
 
+Rationale: a translation between logics must satisfy certain criteria in order to conform with DOL.  Also, a translation between OMS languages based on such logics must be consistent with the translation between these logics.  Translations should not break structuring language aspects nor comments/annotations either.
+
 A logic translation is conformant with DOL if it is presented
 either as an institution morphism or as an institution comorphism.  
 %If the
