conformance of a document

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -988,6 +988,8 @@ For any conforming OMS language, logic, and serialization of an OMS language, it
 
 \sclause{Conformance of a document with DOL}\label{c:conform:document}
 
+Rationale: for exchanging DOL documents with other users/tools, nothing that has a formal semantics must be left implicit.  One DOL tool may assume that by default any OMS fragments inside a DOL document are in some fixed OMS language unless specified otherwise, but another DOL tool can't be assumed to understand such DOL documents.  Defaults are, however, practically convenient, which is the reason for having the following section about the conformance of an \emph{application}.
+
 A document conforms with DOL if it contains a DOL text that is well-formed according to the grammar.  That means, in particular, that any information related to logics has to be made explicit (as foreseen by the DOL abstract syntax specified in \cref{c:abstract-syntax}), such as:
 \begin{itemize}
 \item the logic of each OMS that is part of the DOL document,
